--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,6 +17,8 @@
     <style name = "Theme.ShelterLeh.NoActionBar">
         <item name = "windowActionBar">false</item>
         <item name = "windowNoTitle">true</item>
+        <item name = "android:statusBarColor">@android:color/transparent</item>
+
 
     </style>
 </resources>
