--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -7,19 +7,33 @@
         <item
             android:id="@+id/nav_home"
             android:icon="@drawable/ic_home"
-            android:title="Home" />
+            android:title="Home"
+            android:fontFamily="@font/poppins_regular"
+            android:textColor="@color/grey"
+            />
         <item
             android:id="@+id/nav_contact"
             android:icon="@drawable/ic_contact"
-            android:title="Contact me" />
+            android:title="Contact me"
+            android:fontFamily="@font/poppins_regular"
+            android:textColor="@color/grey"
+            />
         <item
             android:id="@+id/nav_help"
             android:icon="@drawable/ic_help"
-            android:title="Help" />
+            android:title="Help"
+            android:fontFamily="@font/poppins_regular"
+            android:textColor="@color/grey"
+
+            />
         <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_settings"
-            android:title="Settings" />
+            android:title="Settings"
+            android:fontFamily="@font/poppins_regular"
+            android:textColor="@color/grey"
+
+            />
     </group>
 
 
