--- a/app/src/main/res/values/applogo_background.xml
+++ b/app/src/main/res/values/applogo_background.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="applogo_background">#4D82CB</color>
+    <color name="applogo_background">#FFFFFF</color>
 </resources>
