--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -2,16 +2,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="206dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/bluePrimary"
     android:gravity="bottom"
     android:orientation="vertical"
     android:padding="16dp"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <ImageView
-        android:layout_width="80dp"
+    <com.google.android.material.imageview.ShapeableImageView
+
+    android:layout_width="80dp"
         android:layout_height="80dp"
-        android:src="@drawable/profile_pic" />
+        android:src="@drawable/profile_pic"
+        app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
+        app:strokeColor="@color/bluePrimary"
+        app:strokeWidth="1dp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -23,7 +28,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="CEO of Sex"
+        android:text="CEO of no sex"
         android:fontFamily="@font/poppins_regular"/>
 
 
