--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -15,16 +15,18 @@
         android:layout_centerInParent="true"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingActionButton"
+        android:id="@+id/gpsButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="44dp"
-        android:layout_marginBottom="67dp"
+        android:layout_margin="16dp"
         android:clickable="true"
         android:elevation="4dp"
-        app:srcCompat="@android:drawable/ic_menu_mylocation" />
+        android:onClick="gpsClick"
+        app:srcCompat="@android:drawable/ic_menu_mylocation"
+        app:fabSize="normal"
+        />
 
 
 </RelativeLayout>
