--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -44,16 +44,17 @@
         app:layout_constraintBottom_toTopOf="@+id/addButton"
         app:layout_constraintEnd_toEndOf="@+id/addButton"
         app:srcCompat="@drawable/ic_keyboard" />
+
     <TextView
         android:id="@+id/input_location_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
+        android:fontFamily="@font/poppins_italic"
         android:text="Input location"
         app:layout_constraintBottom_toBottomOf="@+id/input_location_fab"
         app:layout_constraintEnd_toStartOf="@+id/input_location_fab"
-        app:layout_constraintTop_toTopOf="@+id/input_location_fab"
-        android:fontFamily="@font/poppins_italic"/>
+        app:layout_constraintTop_toTopOf="@+id/input_location_fab" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/current_location_fab"
@@ -65,15 +66,16 @@
         app:layout_constraintEnd_toEndOf="@+id/input_location_fab"
         app:layout_constraintStart_toStartOf="@+id/input_location_fab"
         app:srcCompat="@drawable/ic_gps" />
+
     <TextView
         android:id="@+id/current_location_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
+        android:fontFamily="@font/poppins_italic"
         android:text="Use current location"
         app:layout_constraintBottom_toBottomOf="@+id/current_location_fab"
         app:layout_constraintEnd_toStartOf="@+id/current_location_fab"
-        app:layout_constraintTop_toTopOf="@+id/current_location_fab"
-        android:fontFamily="@font/poppins_italic"/>
+        app:layout_constraintTop_toTopOf="@+id/current_location_fab" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
