--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,6 +12,7 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="android:itemTextAppearance">@font/poppins_regular</item>
         <item name="android:fontFamily">@font/poppins_regular</item>
     </style>
     <style name = "Theme.ShelterLeh.NoActionBar">
