--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -16,15 +16,14 @@
         android:layout_height="wrap_content"
         android:layout_marginRight="6dp"
         android:layout_marginLeft="6dp"
-        android:layout_marginTop="6dp"
-
-        >
+        android:layout_marginTop="6dp">
 
         <fragment
             android:id="@+id/autocomplete_fragment"
             android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            />
     </androidx.cardview.widget.CardView>
 
 </RelativeLayout>
