--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -15,8 +15,8 @@
             />
         <item
             android:id="@+id/nav_contact"
-            android:icon="@drawable/ic_contact"
-            android:title="Contact me"
+            android:icon="@drawable/ic_about_me"
+            android:title="About me"
             android:textColor="@color/grey"
             />
         <item
