--- a/app/src/main/res/layout/fragment_contact.xml
+++ b/app/src/main/res/layout/fragment_contact.xml
@@ -6,17 +6,18 @@
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:layout_width="350dp"
+        android:id="@+id/linearLayout2"
+        android:layout_width="400dp"
         android:layout_height="330dp"
+        android:background="@drawable/white_border"
+        android:elevation="10dp"
         android:gravity="center"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:background="@drawable/white_border"
-        android:elevation="10dp"
-        >
+        app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
+        <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/selfie"
             android:layout_width="200dp"
             android:layout_height="200dp"
@@ -41,77 +42,95 @@
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Erwin Klaseboer"
             android:gravity="center"
-            android:textSize="20dp"/>
+            android:text="Erwin Klaseboer DCPE/FT/2B/02"
+            android:textSize="20dp" />
 
     </LinearLayout>
 
 
     <TextView
-        android:layout_width="350dp"
+        android:id="@+id/textView"
+        android:layout_width="400dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="332dp"
         android:background="@drawable/white_border"
         android:elevation="10dp"
-        android:padding="5dp"
+        android:padding="10dp"
         android:text="Hey there! I'm a student of Singapore Polytechnic and this app is done for ET0529 MAD module. Below will be ways to contact me as it is a requirement for me and therefore I have to do it. Have fun contacting me!"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="332dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"></LinearLayout>
 
     <ImageView
-        android:id="@+id/imageView6"
+        android:id="@+id/email"
         android:layout_width="85dp"
         android:layout_height="85dp"
-        app:srcCompat="@drawable/telegram"
-        tools:layout_editor_absoluteX="162dp"
-        tools:layout_editor_absoluteY="470dp" />
+        android:layout_marginStart="162dp"
+        android:layout_marginTop="470dp"
+        android:onClick="emailButton"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/gmail" />
 
     <ImageView
-        android:id="@+id/imageView4"
+        android:id="@+id/telegram"
         android:layout_width="85dp"
         android:layout_height="85dp"
-        app:srcCompat="@drawable/telegram"
-        tools:layout_editor_absoluteX="29dp"
-        tools:layout_editor_absoluteY="470dp" />
+        android:layout_marginStart="29dp"
+        android:layout_marginTop="470dp"
+        android:onClick="telegramMsg"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/telegram" />
 
     <ImageView
-        android:id="@+id/imageView7"
+        android:id="@+id/instagram"
         android:layout_width="85dp"
         android:layout_height="85dp"
-        app:srcCompat="@drawable/telegram"
-        tools:layout_editor_absoluteX="162dp"
-        tools:layout_editor_absoluteY="587dp" />
+        android:layout_marginStart="162dp"
+        android:layout_marginTop="587dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/instagram" />
 
     <ImageView
-        android:id="@+id/imageView8"
+        android:id="@+id/phone"
         android:layout_width="85dp"
         android:layout_height="85dp"
-        app:srcCompat="@drawable/telegram"
-        tools:layout_editor_absoluteX="294dp"
-        tools:layout_editor_absoluteY="470dp" />
+        android:layout_marginStart="294dp"
+        android:layout_marginTop="470dp"
+        android:onClick="phoneMsg"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/telephone" />
 
     <ImageView
-        android:id="@+id/imageView5"
+        android:id="@+id/whatsapp"
         android:layout_width="85dp"
         android:layout_height="85dp"
-        app:srcCompat="@drawable/telegram"
-        tools:layout_editor_absoluteX="29dp"
-        tools:layout_editor_absoluteY="587dp" />
+        android:layout_marginStart="29dp"
+        android:layout_marginTop="587dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/whatsapp" />
 
     <ImageView
-        android:id="@+id/imageView9"
+        android:id="@+id/spotify"
         android:layout_width="85dp"
         android:layout_height="85dp"
-        app:srcCompat="@drawable/telegram"
-        tools:layout_editor_absoluteX="294dp"
-        tools:layout_editor_absoluteY="587dp" />
+        android:layout_marginStart="294dp"
+        android:layout_marginTop="587dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/spotify" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
