--- a/app/src/main/res/drawable/white_border.xml
+++ b/app/src/main/res/drawable/white_border.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#fff"/>
+            <solid android:color="?android:attr/colorBackground"/>
             <corners android:radius="25dp"/>
         </shape>
     </item>
