--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="grey">#C0C0C0</color>
+    <color name ="darkPrimary">#212121</color>
+    <color name ="darkSecondary">#303030</color>
 </resources>
