--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,19 +5,54 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <LinearLayout
+        android:id="@+id/linearLayout3"
+        android:layout_width="400dp"
+        android:layout_height="280dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/white_border"
+        android:elevation="10dp"
+        android:orientation="vertical"
+        android:padding="10dp"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="5dp">
+
+        <TextView
+            android:id="@+id/empty"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="false"
+            android:layout_gravity="center"
+            android:fontFamily="@font/poppins"
+            android:padding="10dp"
+            android:text="Tip of the day!"
+            android:textSize="32dp" />
+
+        <TextView
+            android:id="@+id/randomText"
+            android:layout_width="360dp"
+            android:layout_height="170dp"
+            android:layout_gravity="center"
+            android:fontFamily="@font/poppins_regular"
+            android:padding="20dp"
+            android:text="TextView"
+            android:textAlignment="center"
+            android:textSize="22sp" />
+    </LinearLayout>
+
     <TextView
-        android:id="@+id/empty"
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
         android:fontFamily="@font/poppins_italic"
-        android:padding="10dp"
-        android:text="Press the Add button to start!"
+        android:text="Click the + Button to start!"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
+        app:layout_constraintVertical_bias="0.243" />
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/addButton"
