--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,12 +10,15 @@
         android:layout_width="400dp"
         android:layout_height="280dp"
         android:layout_marginTop="16dp"
-        android:background="@drawable/white_border"
+        android:background="@drawable/blue_popup"
         android:elevation="10dp"
+        android:foregroundGravity="center"
+        android:gravity="center"
         android:orientation="vertical"
         android:padding="10dp"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="5dp">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/empty"
@@ -26,6 +29,7 @@
             android:fontFamily="@font/poppins"
             android:padding="10dp"
             android:text="Tip of the day!"
+            android:textColor="@color/white"
             android:textSize="32dp" />
 
         <TextView
@@ -37,6 +41,7 @@
             android:padding="20dp"
             android:text="TextView"
             android:textAlignment="center"
+            android:textColor="@color/white"
             android:textSize="22sp" />
     </LinearLayout>
 
@@ -49,10 +54,9 @@
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
-        app:layout_constraintVertical_bias="0.243" />
+        app:layout_constraintVertical_bias="0.109" />
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/addButton"
