--- a/app/src/main/res/layout/fragment_help.xml
+++ b/app/src/main/res/layout/fragment_help.xml
@@ -30,19 +30,29 @@
                 android:layout_height="wrap_content"
                 android:text="You can use this app by clicking the + button and then clicking on either use current location or search location." />
 
-            <ImageView
-                android:id="@+id/imageOfFab"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:layout_weight="1"
-                android:src="@drawable/extended_fab" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/extendedFABImage"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:layout_weight="1"
-                android:src="@drawable/fab" />
+                <ImageView
+                    android:cropToPadding="true"
+                    android:background="@drawable/border"
+                    android:id="@+id/imageOfFab"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    android:layout_weight="1"
+                    android:src="@drawable/extended_fab" />
+
+                <ImageView
+                    android:cropToPadding="true"
+                    android:background="@drawable/border"
+                    android:id="@+id/extendedFABImage"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    android:layout_weight="1"
+                    android:src="@drawable/fab" />
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/textView7"
@@ -59,6 +69,87 @@
                 android:layout_height="wrap_content"
                 android:text="I created this app as I could not find any shelters by using the official map by the SG government" />
 
+            <TextView
+                android:id="@+id/textView9"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:fontFamily="@font/poppins_medium"
+                android:text="How do I set a route?"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/textView10"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Sorry, not a feature yet" />
+            <TextView
+                android:id="@+id/textView11"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:fontFamily="@font/poppins_medium"
+                android:text="How do I change to Night Mode?"
+                android:textSize="18sp" />
+            <TextView
+                android:id="@+id/textView12"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Go to settings and click Theme" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:cropToPadding="true"
+                    android:background="@drawable/border"
+                    android:id="@+id/imageView4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="114dp"
+                    android:layout_weight="1"
+                    app:srcCompat="@drawable/themeshelp2" />
+
+                <ImageView
+                    android:cropToPadding="true"
+                    android:background="@drawable/border"
+                    android:id="@+id/imageView5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    app:srcCompat="@drawable/themeshelp" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/textView14"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:fontFamily="@font/poppins_medium"
+                android:text="What else can I do?"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/textView13"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Feel free to explore Singapore's map with limited coverage of shelters" />
+
+            <TextView
+                android:id="@+id/textView15"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:fontFamily="@font/poppins_medium"
+                android:text="You must be bored now."
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/textView16"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Thank you for using my app!" />
 
         </LinearLayout>
     </ScrollView>
